--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+example.bleve
+example.bleve/**
+public
+public/**
+smesearch
+resources
+main
+**.lock
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
@@ -19,3 +27,6 @@
 
 # Go workspace file
 go.work
+=======
+.idea
+.idea/**
